--- a/css/index.css
+++ b/css/index.css
@@ -92,7 +92,45 @@ header {
     background-position: center;
     background-repeat: no-repeat;
 }
-
+h1 {
+    color:#fff;
+    text-align: center;
+    margin-bottom: 2%;
+}
+/*body*/
+body {
+    color:rgb(225, 239, 230);
+    background-color: rgb(0, 4, 17, .8);
+}
+/*navagation bar*/
+.navbar {
+    display:flex;
+    justify-content: space-evenly;
+}
+.navbar > a {
+    color: #fff;
+}
+footer nav {
+    margin-bottom:5%;
+}
+.copyright > p {
+    font-size: 50%;
+    text-align: center;
+}
+/*social media at top*/
+.social-media {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 25vh;
+    margin-left: 2%;
+}
+.social-media > a {
+    color:#fff;
+}
+.social-media p {
+    font-size: 125%;
+}
 /* spacers */
 .spacer {
     width: 100%;
@@ -111,6 +149,19 @@ header {
     height: 100vh;
     text-align: center;
     background-color: rgb(0, 4, 17);
+}
+
+.gallery > div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    height: 115vh;  
+    align-items: end;
+}
+/*email*/
+.email {
+    text-align: center;
+    margin-bottom: 5%;
 }
 
 /* about us section */
@@ -199,17 +250,62 @@ footer {
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
-    
-
+    * {
+        max-width: 100%;
+        border: 1px rgb(0, 4, 17) solid;
+    }
+    html, body {
+        color: rgb(0, 4, 17);
+        background-color: rgb(225, 239, 230);
+    }
+    h1 {
+        
+        font-size: 100%;
+        color:rgb(0, 4, 17);
+        border: 1px dashed rgb(0, 4, 17);
+        background-color: rgb(255, 239, 230);
+        padding-top:2%;
+    }
+    header div {
+        text-align: center;
+    }
+    .navbar {
+        margin-top: 15%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 35vh;
+        text-align: center;
+        border: 1px rgb(0, 4, 17) solid;
+        background-color: rgb(255, 239, 230); 
+    }
+    .navbar > a {
+        color: rgb(0, 4, 17);
+    }
+    .navbar > a:active {
+        color: rgb(255, 239, 230);
+        background-color: rgb(0, 4, 17);
+    }
+    .social-media {
+        margin-top: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        color:#fff;
+    }
     /* gallery section */
     .gallery {
         height: auto;
+        display: flex;
+        flex-flow: column wrap;
     }
     
     /* about us section */
 
     .about {
         height: 200vh;
+        color:#fff;
     }
     
     .about h2 {
@@ -219,9 +315,19 @@ footer {
     
     .about-container .text {
         width: 85%;
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: space-evenly;
+        color:#fff;
     }
     
     /* contact us section */
+    .contact-container {
+        margin-top: 5%;
+        color:#fff;
+        display: flex;
+        flex-flow: column wrap;
+    }
     .contact h3 {
         padding-top: 2.5vh;
     }
@@ -249,5 +355,44 @@ footer {
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+    }
+}
+@media (min-width:900px) and (max-width:1024px) {
+    html, body {
+        background-color: #000;
+    }
+    header > .social-media {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .gallery > div {
+        display: flex;
+        flex-wrap: wrap;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .gallery > div > h2 {
+        margin-right: 14%;
+    }
+    .about-container {
+        height:auto;
+        margin-top: 50%;
+        display: flex;
+        flex-direction: column;
+    }
+    .contact-container {
+        margin-top: 15%;
+    }
+    .contacts {
+        margin-right:5%;
+    }
+    footer {
+        background-color:  rgb(0, 4, 17, 0.8);
+    }
+    .navbar a:active {
+        background-color: #fff;
+        color:#000;
     }
 }
