--- a/css/menu.css
+++ b/css/menu.css
@@ -49,6 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
+    max-width: 100%;
 }
 
 html {
@@ -95,6 +96,50 @@ header {
     background-position: center;
     background-repeat: no-repeat;
 }
+/*body*/
+body {
+    color:rgb(225, 239, 230);
+    background-color: rgb(0, 4, 17, .8);
+}
+h1 {
+    color:#fff;
+    text-align: center;
+    margin-bottom: 2%;
+}
+/*navigation bar*/
+.navbar {
+    display:flex;
+    justify-content: space-evenly;
+}
+.navbar > a {
+    color: #fff;
+}
+footer nav {
+    margin-bottom:5%;
+}
+.copyright > p {
+    font-size: 50%;
+    text-align: center;
+}
+/*email*/
+.email {
+    text-align: center;
+    margin-bottom: 5%;
+}
+/*social media at top*/
+.social-media {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 25vh;
+    margin-left: 2%;
+}
+.social-media > a {
+    color:#fff;
+}
+.social-media p {
+    font-size: 125%;
+}
 
 /* spacer */
 .spacer {
@@ -108,11 +153,13 @@ header {
     background-color: rgb(0, 4, 17);
 }
 
-/* menu */
-
+/* food menu */
+* {
+    max-width: 100%;
+}
 .menu {
     width: 100%;
-    height: auto;
+    height: auto; /*originally set to auto*/
     background-image: url('../img/staff-bartender.jpg');
     background-color: rgb(0, 4, 17);
     background-size: cover;
@@ -120,6 +167,20 @@ header {
     background-repeat: no-repeat;
 }
 
+/*Fix food Menu is Oversizing the Width */
+.menu-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    height: 200vh;
+    max-width: 100%;
+    font-size: 50%;
+
+}
+.description {
+    font-size: large;
+}
 /* footer section */
 footer {
     width: 100%;
@@ -148,5 +209,83 @@ footer {
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+    }
+    * {
+        max-width: 100%;
+        border: 1px rgb(0, 4, 17) solid;
+    }
+    html, body {
+        color: rgb(0, 4, 17);
+        background-color: rgb(225, 239, 230);
+    }
+    h1 {
+        
+        font-size: 100%;
+        color:rgb(0, 4, 17);
+        border: 1px dashed rgb(0, 4, 17);
+        background-color: rgb(255, 239, 230);
+        padding-top:2%;
+    }
+    header div {
+        text-align: center;
+    }
+    .navbar {
+        margin-top: 15%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 35vh;
+        text-align: center;
+        border: 1px rgb(0, 4, 17) solid;
+        background-color: rgb(255, 239, 230); 
+    }
+    .navbar > a {
+        color: rgb(0, 4, 17);
+    }
+    .navbar > a:active {
+        color: rgb(255, 239, 230);
+        background-color: rgb(0, 4, 17);
+    }
+    .social-media {
+        margin-top: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        color:#fff;
+    }
+    .menu-container {
+        border:1px solid #fff;
+        color:#fff;
+        text-align: center;
+    }
+}
+
+@media (min-width:900px) and (max-width:1024px) {
+    html, body {
+        background-color: #000;
+    }
+    header > .social-media {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    footer {
+        background-color:  rgb(0, 4, 17, 0.8);
+    }
+    .navbar a:active {
+        background-color: #fff;
+        color:#000;
+    }
+    .menu-container {
+        text-align: center;
+        display: flex;
+        flex-flow: column wrap;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .description {
+        font-size: x-large;
     }
 }
