--- a/css/index.css
+++ b/css/index.css
@@ -103,11 +103,11 @@ body {
     background-color: rgb(0, 4, 17, .8);
 }
 /*navagation bar*/
-.navbar {
+.navbar > nav {
     display:flex;
     justify-content: space-evenly;
 }
-.navbar > a {
+.navbar > nav > a {
     color: #fff;
 }
 footer nav {
@@ -269,7 +269,7 @@ footer {
     header div {
         text-align: center;
     }
-    .navbar {
+    .navbar > nav {
         margin-top: 15%;
         text-align: center;
         display: flex;
@@ -280,7 +280,7 @@ footer {
         border: 1px rgb(0, 4, 17) solid;
         background-color: rgb(255, 239, 230); 
     }
-    .navbar > a {
+    .navbar > nav > a {
         color: rgb(0, 4, 17);
     }
     .navbar > a:active {
