--- a/css/index.css
+++ b/css/index.css
@@ -246,7 +246,13 @@ footer {
     padding-top: 2.5vh;
     font-size: 3rem;
 }
-
+.signdiv {
+    text-align: center;
+    margin-bottom:5%;
+}
+.signdiv button {
+    padding: 0.3% 1%;
+}
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
