--- a/css/menu.css
+++ b/css/menu.css
@@ -186,7 +186,13 @@ footer {
     padding-top: 2.5vh;
     font-size: 3rem;
 }
-
+.signdiv {
+    text-align: center;
+    margin-bottom: 5%;
+}
+.signdiv button {
+    padding: 0.3% 1%;
+}
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
@@ -236,7 +242,7 @@ footer {
         height: 35vh;
         text-align: center;
         border: 1px rgb(0, 4, 17) solid;
-        background-color: rgb(255, 239, 230); 
+        background-color: rgb(255, 239, 230);
     }
     .navbar > nav > a {
         color: rgb(0, 4, 17);
