--- a/css/index.css
+++ b/css/index.css
@@ -88,9 +88,13 @@ header {
     width: 100%;
     height: 100vh;
     background-image: url('../img/home-header.jpg');
+   
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+header div {
+    background-color: rgb(0, 4, 17, 0.8);
 }
 h1 {
     color:#fff;
@@ -100,30 +104,36 @@ h1 {
 /*body*/
 body {
     color:rgb(225, 239, 230);
-    background-color: rgb(0, 4, 17, .8);
+    background-color: rgb(0, 4, 17);
 }
 /*navagation bar*/
 .navbar > nav {
     display:flex;
     justify-content: space-evenly;
+    align-items: start;
+    height: 25vh;
 }
 .navbar > nav > a {
     color: #fff;
 }
+
 footer nav {
     margin-bottom:5%;
 }
+
 .copyright > p {
     font-size: 50%;
     text-align: center;
 }
 /*social media at top*/
+
 .social-media {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    gap: 10px;
+    align-items: end;
     height: 25vh;
-    margin-left: 2%;
+    
 }
 .social-media > a {
     color:#fff;
@@ -135,7 +145,7 @@ footer nav {
 .spacer {
     width: 100%;
     height: 20vh;
-    background-color: rgb(0, 4, 17);
+    background-color: rgba(0, 4, 17, 0.8);
 }
 .spacer-sm {
     width: 100%;
