--- a/css/menu.css
+++ b/css/menu.css
@@ -96,10 +96,13 @@ header {
     background-position: center;
     background-repeat: no-repeat;
 }
+header div {
+    background-color: rgba(0, 4, 17, 0.8);
+}
 /*body*/
 body {
     color:rgb(225, 239, 230);
-    background-color: rgb(0, 4, 17, .8);
+    background-color: rgb(0, 4, 17);
 }
 h1 {
     color:#fff;
@@ -130,7 +133,7 @@ footer nav {
 .social-media {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    gap: 10px;
     height: 25vh;
     margin-left: 2%;
     
@@ -174,7 +177,11 @@ footer nav {
     height: 200vh;
     max-width: 100%;
     font-size: 50%;
+    background-color: rgba(0, 4, 17, 0.8);
 
+}
+h2 {
+    text-align: center;
 }
 .description {
     font-size: large;
