--- a/css/index.css
+++ b/css/index.css
@@ -304,11 +304,9 @@ footer {
         background-color: rgb(0, 4, 17);
     }
     .social-media {
-        margin-top: 10%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        color:#fff;
+        display: block;
+        margin:2%;
+        padding: 0 1% 0 1%;
     }
     /* gallery section */
     .gallery {
