--- a/css/menu.css
+++ b/css/menu.css
@@ -110,13 +110,17 @@ h1 {
     margin-bottom: 2%;
 }
 /*navigation bar*/
-.navbar > nav {
+.menu-bar {
     display:flex;
     justify-content: space-evenly;
+    align-items: center;
+    height: 10vh;
+    flex-wrap: wrap;
 }
-.navbar > nav > a {
+.menu-bar > a {
     color: #fff;
 }
+
 footer nav {
     margin-bottom:5%;
 }
@@ -132,10 +136,9 @@ footer nav {
 /*social media at top*/
 .social-media {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 10px;
-    height: 25vh;
-    margin-left: 2%;
+    justify-content: center;
     
 }
 .social-media > a {
@@ -241,7 +244,7 @@ footer {
     header div {
         text-align: center;
     }
-    .navbar > nav  {
+    .menu-bar {
         margin-top: 15%;
         text-align: center;
         display: flex;
@@ -252,7 +255,7 @@ footer {
         border: 1px rgb(0, 4, 17) solid;
         background-color: rgb(255, 239, 230);
     }
-    .navbar > nav > a {
+    .menu-bar > a {
         color: rgb(0, 4, 17);
     }
     .navbar > a:active {
